modified:   src/app/Components/Usuarios/consulta/consulta.component.css 	modified:   src/app/Components/Usuarios/consulta/consulta.component.html 	modified:   src/app/Components/Usuarios/editar-usuarios/editar-usuarios.component.html 	modified:   src/app/Components/Usuarios/eliminar-usuarios/eliminar-usuarios.component.html 	modified:   src/app/Components/agregar-usuario/agregar-usuario.component.css 	modified:   src/app/Components/agregar-usuario/agregar-usuario.component.html 	modified:   src/app/Components/agregar-usuario/agregar-usuario.component.ts 	modified:   src/app/Components/configuracion/configuracion.component.html 	modified:   src/app/Components/configuracion/configuracion.component.ts 	modified:   src/app/Components/home/home.component.html 	modified:   src/app/Components/navbar/navbar.component.css 	modified:   src/app/Components/navbar/navbar.component.html 	modified:   src/app/Components/reportes/reportes.component.html 	modified:   src/app/app-routing.module.ts 	modified:   src/app/app.component.html 	modified:   src/app/app.component.spec.ts 	modified:   src/app/app.component.ts 	modified:   src/app/app.module.ts 	modified:   src/app/services/agregar-usuario.service.ts 	modified:   src/index.html 	modified:   src/styles.css

--- a/src/app/Components/configuracion/configuracion.component.html
+++ b/src/app/Components/configuracion/configuracion.component.html
@@ -1,1 +1,32 @@
-<p>configuracion works!</p>
+<h1 style="text-align: center; color: white; margin-top: 2%;">Diseño</h1>
+	<h3 style="color: white">Tema</h3>
+		<div class="col" style="text-align: center; width: 33%;">
+			<div class=" row">
+			<div class="col"> <button class="btn btn-primary" (click)="switchToLightTheme()">Tema claro</button> </div>
+			<div class="col"> <button class="btn btn-danger" (click)="switchToLuminisoftTheme()">Tema luminisoft</button> </div>
+			<div class="col"> <button class="btn btn-secondary" (click)="switchToDarkTheme()">Tema oscuro</button> </div>
+			</div>
+		</div>
+
+	<h3 style="color: white; margin-top: 2%;">Tamaño de letra y fuente</h3>
+
+	<h3 style="color: white; margin-top: 2%;">Idioma</h3>
+		
+			<div class="col" style="padding-left: 2%; width: 33%;">
+				<div class="form-group">
+					<select class="form-select" id="Select_idioma" name="Idioma_cambiar">
+						<option value="">Español</option>
+						<option>Inglés</option>
+						<option>-----</option>
+						<option>-----</option>
+					
+					</select>
+				</div>
+			</div>
+
+
+<h1 style="text-align: center; color: white; margin-top: 2%;">Accesibilidad</h1>
+<h3 style="color: white">Corrección de color</h3>
+
+
+<p style="color: white">(Botón de ayuda o soporte?) </p>
