--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,1 +1,97 @@
-<p>home works!</p>
+<div>
+
+	<div class="text-center" style=" padding-top: 30px; color: var(--font-primary-color);">
+		<h1>Datos Importantes Del Día</h1>
+	</div>
+
+	<div class="text-center row" style=" padding-top: 50px; color: var(--font-primary-color);">
+		<h5 class="barra-item col">Día anterior</h5>
+		<h5 class="barra-item col">Jueves 28 de septiembre de 2023▾</h5>
+		<h5 class="barra-item col">Siguiente día</h5>
+
+	</div>
+
+	<div class="row " style="padding-top: 50px;">
+		<div class="col text-center">
+			<p class="d-inline-flex gap-1">
+				<a class="btn btn-success" data-bs-toggle="collapse" href="#collapseExample" role="button"
+					aria-expanded="true" aria-controls="collapseExample" style="color: var(--font-quinary-color)">
+					<h4 >Tabla de actividades ▾</h4>
+				</a>
+			</p>
+			<div class="collapse" id="collapseExample">
+				<!-- Tabla para llenar el resto del espacio -->
+				<table class="table table-unbordered">
+					<thead>
+						<tr>
+							<th class="text-center">Actividad </th>
+							<th>Tiempo / Número</th>
+							<th>Nombre(s)</th>
+							<!-- Agrega más encabezados según sea necesario -->
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Personas que asistieron a la oficina</td>
+							<td>Dato interactivo</td>
+							<td>Dato interactivo</td>
+							<!-- Agrega más filas y datos según sea necesario -->
+						</tr>
+						<tr>
+							<td>Persona con más visitas a la oficina</td>
+							<td>Dato interactivo</td>
+							<td>Dato interactivo</td>
+							<!-- Agrega más filas y datos según sea necesario -->
+						</tr>
+						<tr>
+							<td>Persona con más tiempo en la oficina</td>
+							<td>Dato interactivo</td>
+							<td>Dato interactivo</td>
+							<!-- Agrega más filas y datos según sea necesario -->
+						</tr>
+						<!-- Agrega más filas según sea necesario -->
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+
+	<div class="row" style="padding-top: 20px;">
+		<div class="col text-center">
+
+			<p class="d-inline-flex gap-1">
+				<a class="btn btn-success" data-bs-toggle="collapse" href="#collapseExample2" role="button"
+					aria-expanded="false" aria-controls="collapseExample2" style="color: var(--font-quinary-color)">
+					<h4>Tabla de mensajes ▾</h4>
+				</a>
+
+			</p>
+			<div class="collapse" id="collapseExample2">
+				<table class="table table-unbordered">
+					<thead>
+						<tr>
+							<th class="text-center"> Persona </th>
+							<th> Mensaje </th>
+							<!-- Agrega más encabezados según sea necesario -->
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Dato interactivo</td>
+							<td>Dato interactivo</td>
+							<!-- Agrega más filas y datos según sea necesario -->
+						</tr>
+						<tr>
+							<td>Dato interactivo</td>
+							<td>Dato interactivo</td>
+							<!-- Agrega más filas y datos según sea necesario -->
+						</tr>
+
+						<!-- Agrega más filas según sea necesario -->
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+
+</div>
