--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,1 +1,146 @@
-<p>navbar works!</p>
+<!---
+<nav class="navbar navbar-expand-lg navbar-ligth" style="background-color: #28b8ae;">
+	<a class="navbar-brand"></a>
+	<a class="navbar-brand">APP RECONOCIMIENTO FACIAL</a>
+				
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
+			
+			<li class="nav-item active">
+				<a class="nav-link" [routerLink]="['home']">Home</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" [routerLink]="['about']">About</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" [routerLink]="['users']">Users</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" [routerLink]="['products']">Products</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" [routerLink]="['fotos']">Fotos</a>
+			</li>
+			<li class="nav-item">
+				<button class="btn btn-secondary" [routerLink]="'auth/signin'">
+					Login
+				</button>
+			</li>
+			
+
+		</ul>
+	</div>
+</nav>
+-->
+
+
+<div class="container-fluid">
+	<div class="row flex-nowrap">
+		<div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0" style="background-color: var(--primary-color);">
+			<div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+				<img class="mx-auto" src="assets\images\LOGO.png"
+					alt="" height="150px" [routerLink]="['Home']">
+				
+				<h4>FACEGUARD V.1</h4>
+				
+				<!--
+				<a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none nav-link" [routerLink]="['Home']">
+				
+					<span class="mt-4 fs-5 d-none d-sm-inline" style="color :white; font-weight: 500;">FACEGUARD TECH</span>
+					
+				</a>
+				-->
+
+				<ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+					<li class="nav-item">
+						<a href="#" class="nav-link align-middle px-0" [routerLink]="['AgregarUsuario']">
+							<i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline" >Añadir Usuario</span>
+						</a>
+					</li>
+					<li>
+						<a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+							<i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline" >Usuarios ▾</span>
+						</a>
+						<ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
+							<li class="w-100">
+								<a href="#" class="nav-link px-0" [routerLink]="['Consulta-Usuarios']"> <span class="d-none d-sm-inline" style="padding-left: 25px;"> → Consulta</span>  </a>
+							</li>
+							<li>
+								<a href="#" class="nav-link px-0" [routerLink]="['Editar-Usuarios']"> <span class="d-none d-sm-inline" style="padding-left: 25px;"> → Edición</span>  </a>
+							</li>
+							<li>
+								<a href="#" class="nav-link px-0" [routerLink]="['Eliminar-Usuarios']"> <span class="d-none d-sm-inline" style="padding-left: 25px;"> → Eliminar Usuarios</span> </a>
+							</li>
+						</ul>
+					</li>
+					
+				<!--
+					<li>
+						<a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+							<i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Consultas SQL ▾</span> </a>
+						<ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
+							<li class="w-100">
+								<a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline"style="padding-left: 25px;"> → Tiempo en oficina</span> </a>
+							</li>
+							<li>
+								<a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline"style="padding-left: 25px;"> → Avances Proyectos</span> </a>
+							</li>
+							<li>
+								<a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline"style="padding-left: 25px;"> → Días de asistencia</span> </a>
+							</li>
+							<li>
+								<a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline"style="padding-left: 25px;"> → Mensajes previos</span> </a>
+							</li>
+						</ul>
+					</li>
+				-->
+					
+					<li class="nav-item">
+						<a href="#" class="nav-link align-middle px-0" [routerLink]="['Reportes']">
+							<i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Reportes</span>
+						</a>
+					</li>
+
+				</ul>
+				<hr>
+
+					<!--
+				<div class="row" style="padding-top: 3%; padding-bottom: 3%;">
+					<a>Desarrollado y creado por:</a>
+					<img src="https://www.luminisoft.com.mx/img-luminisoft/logoweb_2.0.svg" alt=""
+					style="height: 60px;">
+				</div>
+				-->
+				<div class="row" style="padding-bottom: 7%;">
+					<div class="col"><a >Made by: </a></div>
+					<div class="col"><a href=" http://www.luminisoft.com.mx/#" style="color: white; text-decoration: none;"> Luminisoft </a></div>
+					
+				</div>
+				
+
+				<div class="dropdown pb-4">
+					<a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
+						id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+						<img src="https://www.luminisoft.com.mx/img-luminisoft/logoweb_2.0.svg" alt="hugenerd" width="30" height="30"
+							class="rounded-circle">
+						<span class="d-none d-sm-inline mx-1" style="color :white">Nombre de usuario</span>
+					</a>
+					<ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+						<li><a class="dropdown-item" href="#" [routerLink]="['Config']">Configuración</a></li>
+						<!--<li><a class="dropdown-item" href="#">Perfil</a></li>-->
+						<li>
+							<hr class="dropdown-divider">
+						</li>
+						<li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<div class="col"> <!-- Área para el contenido -->
+			<router-outlet>
+			
+			</router-outlet> <!-- Aquí se cargará el componente Home -->
+		</div>
+	</div>
+</div>
