--- a/src/app/Components/Usuarios/consulta/consulta.component.html
+++ b/src/app/Components/Usuarios/consulta/consulta.component.html
@@ -1,1 +1,172 @@
-<p>consulta works!</p>
+
+<!-- npm i bootstrap-icons -->
+<div class="row" style="padding-left: 50px; padding-top: 40px; padding-bottom: 20px;">
+
+	<div class="col d-flex justify-content-center">
+		<h1 style="color: white">Consultar Usuarios</h1>
+	</div>
+
+
+	<div class="input-group mb-3 col">
+		<input type="text" class="form-control" placeholder="Nombre/Rol/Carrera/Proyecto"
+			aria-label="Recipient's username" aria-describedby="basic-addon2" style="border-radius: 10px;">
+		<div class="input-group-append">
+			<button class="btn btn-danger" type="button">
+				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search"
+					viewBox="0 0 17 16">
+					<path
+						d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+				</svg>
+			</button>
+		</div>
+	</div>
+</div>
+
+<div class="row" style="padding-top: 50px; color: white">
+	<div class="col">
+		<div class="text-center">
+			<img class="item-center" style="border-radius: 25%;"
+				src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Imagen a subir"
+				width="200" height="200">
+		</div>
+		<div class="text-center">
+			
+			<div class="row">
+				<a> Nombre de la persona numero 1</a>
+			</div>
+			<div class="row">
+				<a> Rol (Estudiante/profesor) </a>
+			</div>
+			<div class="row">
+				<a> Carrera (Ing en .....) </a>
+			</div>
+			<div class="row">
+				<a> Proyecto actual en desarrollo </a>
+			</div>
+			
+		</div>
+	</div>
+	<div class="col">
+		<div class="text-center">
+			<img class="item-center" style="border-radius: 25%;"
+				src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Imagen a subir"
+				width="200" height="200">
+		</div>
+		<div class="text-center">
+
+			<div class="row">
+				<a> Nombre de la persona numero 1</a>
+			</div>
+			<div class="row">
+				<a> Rol (Estudiante/profesor) </a>
+			</div>
+			<div class="row">
+				<a> Carrera (Ing en .....) </a>
+			</div>
+			<div class="row">
+				<a> Proyecto actual en desarrollo </a>
+			</div>
+			
+		</div>
+	</div>
+	<div class="col">
+		<div class="text-center">
+			<img class="item-center" style="border-radius: 25%;"
+				src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Imagen a subir"
+				width="200" height="200">
+		</div>
+		<div class="text-center">
+
+			<div class="row">
+				<a> Nombre de la persona numero 1</a>
+			</div>
+			<div class="row">
+				<a> Rol (Estudiante/profesor) </a>
+			</div>
+			<div class="row">
+				<a> Carrera (Ing en .....) </a>
+			</div>
+			<div class="row">
+				<a> Proyecto actual en desarrollo </a>
+			</div>
+			
+		</div>
+	</div>
+
+	
+</div>
+
+<div class="row" style="padding-top: 50px; color: white">
+	<div class="col">
+		<div class="text-center">
+			<img class="item-center" style="border-radius: 25%;"
+				src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Imagen a subir"
+				width="200" height="200">
+		</div>
+		<div class="text-center">
+			
+			<div class="row">
+				<a> Nombre de la persona numero 1</a>
+			</div>
+			<div class="row">
+				<a> Rol (Estudiante/profesor) </a>
+			</div>
+			<div class="row">
+				<a> Carrera (Ing en .....) </a>
+			</div>
+			<div class="row">
+				<a> Proyecto actual en desarrollo </a>
+			</div>
+			
+		</div>
+	</div>
+	<div class="col">
+		<div class="text-center">
+			<img class="item-center" style="border-radius: 25%;"
+				src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Imagen a subir"
+				width="200" height="200">
+		</div>
+		<div class="text-center">
+
+			<div class="row">
+				<a> Nombre de la persona numero 1</a>
+			</div>
+			<div class="row">
+				<a> Rol (Estudiante/profesor) </a>
+			</div>
+			<div class="row">
+				<a> Carrera (Ing en .....) </a>
+			</div>
+			<div class="row">
+				<a> Proyecto actual en desarrollo </a>
+			</div>
+			
+		</div>
+	</div>
+	<div class="col">
+		<div class="text-center">
+			<img class="item-center" style="border-radius: 25%;"
+				src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Imagen a subir"
+				width="200" height="200">
+		</div>
+		<div class="text-center">
+
+			<div class="row">
+				<a> Nombre de la persona numero 1</a>
+			</div>
+			<div class="row">
+				<a> Rol (Estudiante/profesor) </a>
+			</div>
+			<div class="row">
+				<a> Carrera (Ing en .....) </a>
+			</div>
+			<div class="row">
+				<a> Proyecto actual en desarrollo </a>
+			</div>
+			
+		</div>
+	</div>
+
+	
+</div>
+
