--- a/src/app/Components/Usuarios/editar-usuarios/editar-usuarios.component.html
+++ b/src/app/Components/Usuarios/editar-usuarios/editar-usuarios.component.html
@@ -1,1 +1,87 @@
-<p>editar-usuarios works!</p>
+<!-- npm i bootstrap-icons -->
+
+<div class="row" style="padding-left: 50px; padding-top: 40px; padding-bottom: 20px;">
+
+	<div class="col d-flex justify-content-center">
+		<h1 style="color: white">Editar Usuarios</h1>
+	</div>
+
+
+	<div class="input-group mb-3 col" >
+		<input type="text" class="form-control" placeholder="Nombre/Rol/Carrera/Proyecto"
+			aria-label="Recipient's username" aria-describedby="basic-addon2" style="border-radius: 10px;">
+		<div class="input-group-append">
+			<button class="btn btn-danger" type="button">
+				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search"
+					viewBox="0 0 17 16">
+					<path
+						d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+				</svg>
+			</button>
+		</div>
+	</div>
+</div>
+
+<div class="row" style="padding-bottom: 40px; text-align: right;">
+	<div class="col"><button type="button" class="btn btn-warning">Editar Usuarios seleccionados</button></div>
+</div>
+
+
+
+<table class="table-success table table-hover">
+	<thead>
+		<tr>
+			<th scope="col"></th>
+			<th scope="col">Nombre completo</th>
+			<th scope="col">Carrera</th>
+			<th scope="col">Rol</th>
+			<th scope="col">Proyecto</th>
+			<th scope="col">Foto</th>
+			<th scope="col"></th>
+		</tr>
+	</thead>
+
+	<tbody>
+
+		<tr>
+			<td>
+				<div>
+					<input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="...">
+				</div>
+			</td>
+			<td>Alan David Jimenez R</td>
+			<td>Ing. en Ciencia de Datos</td>
+			<td>Miembro</td>
+			<td>Reconocimiento Facial / Mensajes</td>
+			<td>(FOTO)</td>
+			<td>
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" type="button"
+					viewBox="0 0 16 16">
+					<path
+						d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z" />
+				</svg>
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+				<div>
+					<input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="...">
+				</div>
+			</td>
+			<td>Samuel Perez Guarneros</td>
+			<td>Ing. en Software</td>
+			<td>Miembro</td>
+			<td>Reconocimiento Facial / Mensajes</td>
+			<td>(FOTO)</td>
+			<td>
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill"
+					type="button" viewBox="0 0 16 16">
+					<path
+						d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z" />
+				</svg>
+			</td>
+		</tr>
+
+	</tbody>
+</table>
