--- a/src/app/Components/Usuarios/eliminar-usuarios/eliminar-usuarios.component.html
+++ b/src/app/Components/Usuarios/eliminar-usuarios/eliminar-usuarios.component.html
@@ -1,1 +1,87 @@
-<p>eliminar-usuarios works!</p>
+<!-- npm i bootstrap-icons -->
+
+<div class="row" style="padding-left: 50px; padding-top: 40px; padding-bottom: 20px;">
+
+	<div class="col d-flex justify-content-center">
+		<h1 style="color: white">Eliminar Usuarios</h1>
+	</div>
+
+
+	<div class="input-group mb-3 col">
+		<input type="text" class="form-control" placeholder="Nombre/Rol/Carrera/Proyecto"
+			aria-label="Recipient's username" aria-describedby="basic-addon2" style="border-radius: 10px;">
+		<div class="input-group-append">
+			<button class="btn btn-danger" type="button">
+				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search"
+					viewBox="0 0 17 16">
+					<path
+						d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+				</svg>
+			</button>
+		</div>
+	</div>
+</div>
+
+<div class="row" style="padding-bottom: 40px; text-align: right;">
+	<div class="col"><button type="button" class="btn btn-warning">Eliminar Usuarios seleccionados</button></div>
+</div>
+
+
+
+<table class="table-danger table table-hover">
+	<thead>
+		<tr>
+			<th scope="col"></th>
+			<th scope="col">Nombre completo</th>
+			<th scope="col">Carrera</th>
+			<th scope="col">Rol</th>
+			<th scope="col">Proyecto</th>
+			<th scope="col">Foto</th>
+			<th scope="col"></th>
+		</tr>
+	</thead>
+
+	<tbody>
+
+		<tr>
+			<td>
+				<div>
+					<input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="...">
+				</div>
+			</td>
+			<td>Alan David Jimenez R</td>
+			<td>Ing. en Ciencia de Datos</td>
+			<td>Miembro</td>
+			<td>Reconocimiento Facial / Mensajes</td>
+			<td>(FOTO)</td>
+			<td>
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill"
+					type="button" viewBox="0 0 16 16">
+					<path
+						d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z" />
+				</svg>
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+				<div>
+					<input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="...">
+				</div>
+			</td>
+			<td>Samuel Perez Guarneros</td>
+			<td>Ing. en Software</td>
+			<td>Miembro</td>
+			<td>Reconocimiento Facial / Mensajes</td>
+			<td>(FOTO)</td>
+			<td>
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" type="button"
+					viewBox="0 0 16 16">
+					<path
+						d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z" />
+				</svg>
+			</td>
+		</tr>
+
+	</tbody>
+</table>
