--- a/src/app/Components/agregar-usuario/agregar-usuario.component.html
+++ b/src/app/Components/agregar-usuario/agregar-usuario.component.html
@@ -1,1 +1,91 @@
-<p>agregar-usuario works!</p>
+<div>
+
+
+	<div class="row text-center mt-4">
+		<h2 class="" style="font-weight: 500; color: white; padding-bottom: 3%;"> Agregar un nuevo usuario </h2>
+	</div>
+
+	<div class="container">
+
+		<div class="row">
+
+			<div class="col-md-6">
+					<div class="col">
+						<form action="" method="POST" autocomplete="on" enctype="multipart/form-data" id="formData" (submit)="sendInfo($event)">
+							<div class="row">
+								<div class="col-11 align-items-center " style="padding-right: 5%; padding-left: 5%;">
+									<div class="col">
+										<canvas class="canvas item-center" width="300px" height="300px" style="border-radius: 25%;">
+											<img class="item-center"
+											src=""
+											alt="Fotografía a subir" width="300px" height="300px"
+											id="photo">
+										</canvas>
+										
+									</div>
+									<div class="form-group">
+										<label for="photoFile" class="form-label mt-4">Subir Fotografía...</label>
+										<input class="form-control" type="file" id="photoFile" name="photoFile"
+											capture="user" accept="image/*"
+											(input)="captureFile($event)"
+											style="border-color: white; background-color: #434343; color: white;">
+									</div>
+					
+					
+									<div class="form-group">
+										<label for="name" class="form-label mt-2" >Nombre</label>
+										<input type="text" class="form-control" id="name" name="name">
+									</div>
+									
+									<div class="text-center mt-5">
+										<div class="d-inline-block">
+											<button type="button" class="btn btn-primary btn-lg" (click)="sendInfo($event)">Agregar</button>
+
+										</div>
+										<div class="d-inline-block ml-2">
+											<button class="btn btn-danger btn-lg">Cancelar</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</form>
+
+
+					</div>
+
+			</div>
+
+			<div class="col-md-6">
+				<h3 class="text-center" style="font-weight: 500; color: white; padding-bottom: 25px;"> Tomar fotografía </h3>
+
+				<div class="row" style="padding-bottom: 20px;">
+					
+					<div class="col">
+						<div class="form-check form-switch" style="padding-left: 60px;" >
+							<input class="form-check-input" type="checkbox" role="switch" id="camaraControl" checked
+								style="width: 60px; height: 30px;" (change)="controlCamera()">
+
+							<label class="form-check-label" for="flexSwitchCheckChecked"
+								style="padding-left: 10px; font-size: larger; color: #fff;">Activar cámara</label>
+						</div>
+					</div>
+
+					<div class="col">
+						<div class="d-flex justify-content-center">
+							<button type="button" class="btn btn-danger" (click)="captureImage()"
+							style="width: 200px; height: 50px; font-size: x-large;">Tomar foto </button>
+						</div>
+					</div>
+				</div>
+				
+				<div style=" text-align: center;">
+					<video id="video" autoplay="true"> </video>
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
+</div>
+
