modified:   src/app/Components/agregar-usuario/agregar-usuario.component.html 	modified:   src/app/Components/agregar-usuario/agregar-usuario.component.ts

--- a/src/app/Components/agregar-usuario/agregar-usuario.component.html
+++ b/src/app/Components/agregar-usuario/agregar-usuario.component.html
@@ -43,7 +43,7 @@
 
 										</div>
 										<div class="d-inline-block ml-2">
-											<button class="btn btn-danger btn-lg">Cancelar</button>
+											<button class="btn btn-danger btn-lg" (click)="cancel($event)">Cancelar</button>
 										</div>
 									</div>
 								</div>
