new file:   src/app/Components/Usuarios/consulta-mensajes/consulta-mensajes.component.css 	new file:   src/app/Components/Usuarios/consulta-mensajes/consulta-mensajes.component.html 	new file:   src/app/Components/Usuarios/consulta-mensajes/consulta-mensajes.component.spec.ts 	new file:   src/app/Components/Usuarios/consulta-mensajes/consulta-mensajes.component.ts 	modified:   src/app/Components/Usuarios/consulta/consulta.component.css 	modified:   src/app/Components/Usuarios/consulta/consulta.component.html 	modified:   src/app/Components/Usuarios/consulta/consulta.component.ts 	modified:   src/app/Components/navbar/navbar.component.html 	new file:   src/app/Core/user.ts 	modified:   src/app/app-routing.module.ts 	modified:   src/app/app.module.ts 	new file:   src/app/services/consultar-mensajes.service.spec.ts 	new file:   src/app/services/consultar-mensajes.service.ts 	new file:   src/app/services/consultar-usuarios.service.spec.ts 	new file:   src/app/services/consultar-usuarios.service.ts

--- a/src/app/Components/Usuarios/consulta/consulta.component.html
+++ b/src/app/Components/Usuarios/consulta/consulta.component.html
@@ -1,5 +1,6 @@
+<!--
+	
 
-<!-- npm i bootstrap-icons -->
 <div class="row" style="padding-left: 50px; padding-top: 40px; padding-bottom: 20px;">
 
 	<div class="col d-flex justify-content-center">
@@ -168,5 +169,24 @@
 	</div>
 
 	
+</div>
+-->
+
+<div class="container">
+	<div class="row">
+		<div class="col">
+			<h1 class="text-center" style="color: white">Consultar Usuarios</h1>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col col-3" *ngFor="let user of users">
+			<div class="card">
+				<img [src]="'data:image/jpeg;base64'+user.foto" alt="">
+				<div class="card-body">
+					<h5>{{user.nombre}}</h5>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
