--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -65,6 +65,9 @@
 							<li class="w-100">
 								<a href="#" class="nav-link px-0" [routerLink]="['Consulta-Usuarios']"> <span class="d-none d-sm-inline" style="padding-left: 25px;"> → Consulta</span>  </a>
 							</li>
+							<li class="w-100">
+								<a href="#" class="nav-link px-0" [routerLink]="['Consulta-Mensajes']"> <span class="d-none d-sm-inline" style="padding-left: 25px;"> → Ver mensajes</span>  </a>
+							</li>
 							<li>
 								<a href="#" class="nav-link px-0" [routerLink]="['Editar-Usuarios']"> <span class="d-none d-sm-inline" style="padding-left: 25px;"> → Edición</span>  </a>
 							</li>
