--- a/src/app/Components/Usuarios/consulta/consulta.component.html
+++ b/src/app/Components/Usuarios/consulta/consulta.component.html
@@ -173,20 +173,9 @@
 -->
 
 <div class="container">
-	<div class="row">
-		<div class="col">
-			<h1 class="text-center" style="color: white">Consultar Usuarios</h1>
-		</div>
+	<div class="header mx-auto">
+		<h2 class="mt-3 mb-3 mx-auto">Consultar Usuarios</h2>
 	</div>
-	<div class="row">
-		<div class="col col-3" *ngFor="let user of users">
-			<div class="card">
-				<img [src]="'data:image/jpeg;base64'+user.foto" alt="">
-				<div class="card-body">
-					<h5>{{user.nombre}}</h5>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 </div>
 
