modified:   src/app/Components/navbar/navbar.component.html

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -38,10 +38,10 @@
 	<div class="row flex-nowrap">
 		<div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0" style="background-color: var(--primary-color);">
 			<div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-				<img class="mx-auto" src="assets\images\LOGO.png"
-					alt="" height="150px" [routerLink]="['Home']">
+				<img class="mx-auto" src="assets\images\LOGO3.png"
+					alt="" height="200px" [routerLink]="['Home']">
 				
-				<h4>FACEGUARD V.1</h4>
+				<h4>FACE-GUARD</h4>
 				
 				<!--
 				<a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none nav-link" [routerLink]="['Home']">
