--- a/src/app/Components/Usuarios/consulta-mensajes/consulta-mensajes.component.css
+++ b/src/app/Components/Usuarios/consulta-mensajes/consulta-mensajes.component.css
@@ -1,51 +1,74 @@
-body{
-    margin: 0;
+
+
+h3{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.header{
+
+
+h5{
+    color: #FFFFFF;
+  }
+
+  .card-body{
+    background-color: #38454F;
+  }
+
+.user-card {
+    margin-bottom: 20px;
+  }
+  
+  .card {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .card img {
     width: 100%;
-    background-color: #0d1f2d;
-    padding: 5px 5%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+  
+  .card-body {
+    padding: 10px;
+  }
+  
+  .card-body h5 {
+    margin: 0;
+    font-size: 18px;
+    color: #FFFFFF;
+  }
+
+
+  h2{
+    color: #FFFFFF;
+  }
+
+  .mensaje{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    z-index: 1;
-}
-
-#mensajes{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.contenido{
-    margin-top: 1rem;
-}
-
-.img-small{
-    width: 5%;
-    height: auto;
-}
-
-.rounded-circle{
-    border-radius: 20%;
+    padding: 10px;
+    margin: 10px;
+    background-color: #38454F;
+    border-radius: 5px;
+    color:#FFFFFF
 
 }
 
-.list-group-item{
-    background-color: #f8f9fa;
-    border: 1px solid #dee2e6;
-    border-radius: 0.25rem;
-    padding: 0.75rem 1.25rem;
-    margin-bottom: -1px;
+.mensaje p{
+    margin: 0;
+    font-size: 18px;
+    color: #FFFFFF;
 }
 
-.list-group-item p{
-    font-size: large;
+p{
+    margin: 0;
+    font-size: 18px;
+    color: #FFFFFF;
 }
 
-.mensaje{
-    display: flex;
-    justify-content: space-between;
-}
+
+
+
+  
