--- a/src/app/Components/Usuarios/consulta-mensajes/consulta-mensajes.component.html
+++ b/src/app/Components/Usuarios/consulta-mensajes/consulta-mensajes.component.html
@@ -1,3 +1,5 @@
 <div id="mensajes">
-    
+    <div class="header mx-auto mb-3 text-center">
+        <h2 class="mx-auto">Consulta de mensajes enviados</h2>
+    </div>
 </div>
