modified:   src/app/Components/Usuarios/consulta-mensajes/consulta-mensajes.component.html 	modified:   src/app/services/agregar-usuario.service.ts

--- a/src/app/Components/Usuarios/consulta-mensajes/consulta-mensajes.component.html
+++ b/src/app/Components/Usuarios/consulta-mensajes/consulta-mensajes.component.html
@@ -1,5 +1,5 @@
 <div id="mensajes">
-    <div class="header mx-auto mb-3 text-center">
+    <div class="header mx-auto mt-3 mb-3 text-center">
         <h2 class="mx-auto">Consulta de mensajes enviados</h2>
     </div>
 </div>
